--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-@import "./partials/_Navbar.scss";
+@import "./partials/Navbar";
+@import "./partials/buttons";
 
 html,
 body {
